# smc-bot-toolkit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.webhook  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
deploy/: smc-bot.service
docs/: DEPLOY_STREAMLIT.md  PAPER_TRADE_SETUP.md  RUNBOOK.md  SETUP.md  STRATEGY.md  TV_WEBHOOK_SETUP.md  daniel_ramirez_bot_strategy.md
pages/: 1_Trade_Reviewer.py  2_Live_Performance.py  3_Trade_Journal.py  4_Trade_Analytics.py  5_Strategy_Health.py
scripts/: analyze_trade.py  dashboard.py  fetch_history.py  reconcile.py  run_backtest.py  webhook.py
src/bot/: __init__.py  alerts.py  config.py  data_feed.py  detectors.py  engine.py  live_broker.py  paper_broker.py  risk.py  state.py  strategy.py
supabase/migrations/: 20260506_init.sql
tests/: test_config.py  test_detectors.py  test_paper_broker.py  test_risk.py  test_strategy.py
