[project]
name = "smc-paper-bot"
version = "0.1.0"
description = "SMC paper trading bot for BingX (educational, not profitable)"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "supabase>=2.3",
    "python-telegram-bot>=20.7",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py39"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
